--- a/libft/Makefile
+++ b/libft/Makefile
@@ -9,7 +9,7 @@ SRCS = ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c ft_isprint.c ft_strle
 		 get_next_line/get_next_line_bonus.c get_next_line/get_next_line_utils_bonus.c \
 		 ft_lstnew_bonus.c ft_lstadd_front_bonus.c ft_listsize_bonus.c ft_lstlast_bonus.c \
          ft_lstadd_back_bonus.c ft_lstdelone_bonus.c ft_lstclear_bonus.c ft_lstiter_bonus.c \
-         ft_lstmap_bonus.c
+         ft_lstmap_bonus.c ft_strcmp.c
 
 OBJECTS = $(SRCS:.c=.o)
 
